Done DM Lab and Equipment

--- a/Lab_Management.v1/src/main/resources/application.properties
+++ b/Lab_Management.v1/src/main/resources/application.properties
@@ -10,14 +10,14 @@ server.port=8080
 error.path=/error
 
 
-app.datasource.jdbc-url= jdbc:mysql://localhost:3306/labmanagement
+app.datasource.jdbc-url= jdbc:mysql://localhost:3306/lab_management
 app.datasource.username= root
 app.datasource.password= 123456
 
 spring.data.jpa.repository.packages=LabManagement.dao
 spring.data.jpa.entity.packages-to-scan=LabManagement.entity
 
-security.datasource.jdbc-url= jdbc:mysql://localhost:3306/labmanagement
+security.datasource.jdbc-url= jdbc:mysql://localhost:3306/lab_management
 security.datasource.username= root
 security.datasource.password= 123456
 
