--- a/Lab_Management.v1/pom.xml
+++ b/Lab_Management.v1/pom.xml
@@ -8,7 +8,7 @@
         <version>2.6.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.SpringBootMVCwithEntity</groupId>
+    <groupId>com.SpringBootMVC.Lab_Management</groupId>
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>demo</name>
