Demo DATN lan 2

--- a/Lab_Management.v1/src/main/resources/application.properties
+++ b/Lab_Management.v1/src/main/resources/application.properties
@@ -11,15 +11,19 @@ error.path=/error
 
 
 app.datasource.jdbc-url= jdbc:mysql://localhost:3306/lab_management
+#app.datasource.jdbc-url= jdbc:mysql://192.168.125.240:3306/lab_management
 app.datasource.username= root
 app.datasource.password= 123456
+#app.datasource.password= 123456789
 
 spring.data.jpa.repository.packages=LabManagement.dao
 spring.data.jpa.entity.packages-to-scan=LabManagement.entity
 
 security.datasource.jdbc-url= jdbc:mysql://localhost:3306/lab_management
+#security.datasource.jdbc-url= jdbc:mysql://192.168.125.240:3306/lab_management
 security.datasource.username= root
 security.datasource.password= 123456
+#security.datasource.password= 123456789
 
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
