--- a/Lab_Management.v1/docker-compose.yaml
+++ b/Lab_Management.v1/docker-compose.yaml
@@ -2,27 +2,29 @@ version: '3'
 services:
   mysql-container:
     image: mysql:8.0.30
-    container_name: mysql-container2
+    container_name: mysql-container-lab
     ports:
-      - "3337:3306"
+      - "3307:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=123456
-      - MYSQL_DATABASE=mobileshopdb4
+      - MYSQL_ROOT_PASSWORD=123456789
+      - MYSQL_DATABASE=lab_management
       - MYSQL_USER=root
-      - MYSQL_PASSWORD=123456
+      - MYSQL_PASSWORD=123456789
     networks:
-      - my-network2
+      - lab-network
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
-  mobileshop:
-    image: mobileshop2
-    container_name: mobileshop2
+  web-container-lab:
+    build:
+      context: .
+      dockerfile: dockerfile
+    container_name: web-container-lab
     ports:
-      - "8082:8082"
+      - "8081:8080"
     networks:
-      - my-network
+      - lab-network
 
 networks:
-  my-network:
+  lab-network:
     external: true
