--- a/Lab_Management.v1/src/main/resources/application.properties
+++ b/Lab_Management.v1/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 #spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
 spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=55MB
 spring.servlet.multipart.location=${user.dir}/src/main/resources/static/
@@ -10,20 +11,22 @@ server.port=8080
 error.path=/error
 
 
-app.datasource.jdbc-url= jdbc:mysql://localhost:3306/lab_management
-#app.datasource.jdbc-url= jdbc:mysql://192.168.125.240:3306/lab_management
+#app.datasource.jdbc-url= jdbc:mysql://localhost:3306/lab_management
+app.datasource.jdbc-url= jdbc:mysql://mysql-container-lab:3306/lab_management
 app.datasource.username= root
-app.datasource.password= 123456
+#app.datasource.password= 123456
 #app.datasource.password= 123456789
+app.datasource.password= root
 
 spring.data.jpa.repository.packages=LabManagement.dao
 spring.data.jpa.entity.packages-to-scan=LabManagement.entity
 
-security.datasource.jdbc-url= jdbc:mysql://localhost:3306/lab_management
-#security.datasource.jdbc-url= jdbc:mysql://192.168.125.240:3306/lab_management
+#security.datasource.jdbc-url= jdbc:mysql://localhost:3306/lab_management
+security.datasource.jdbc-url= jdbc:mysql://mysql-container-lab:3306/lab_management
 security.datasource.username= root
-security.datasource.password= 123456
+#security.datasource.password= 123456
 #security.datasource.password= 123456789
+security.datasource.password= root
 
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
