Done Dark Theme user side

--- a/Lab_Management.v1/src/main/resources/application.properties
+++ b/Lab_Management.v1/src/main/resources/application.properties
@@ -9,24 +9,24 @@ spring.servlet.multipart.location=${user.dir}/src/main/resources/static/
 
 server.port=8080
 error.path=/error
-
-
-#app.datasource.jdbc-url= jdbc:mysql://localhost:3306/lab_management
-app.datasource.jdbc-url= jdbc:mysql://mysql-container-lab:3306/lab_management
-app.datasource.username= root
-#app.datasource.password= 123456
-#app.datasource.password= 123456789
-app.datasource.password= root
-
 spring.data.jpa.repository.packages=LabManagement.dao
 spring.data.jpa.entity.packages-to-scan=LabManagement.entity
 
-#security.datasource.jdbc-url= jdbc:mysql://localhost:3306/lab_management
-security.datasource.jdbc-url= jdbc:mysql://mysql-container-lab:3306/lab_management
+app.datasource.jdbc-url= jdbc:mysql://localhost:3306/lab_management
+app.datasource.username= root
+app.datasource.password= 123456
+
+security.datasource.jdbc-url= jdbc:mysql://localhost:3306/lab_management
 security.datasource.username= root
-#security.datasource.password= 123456
-#security.datasource.password= 123456789
-security.datasource.password= root
+security.datasource.password= 123456
+
+#Docker-Compose
+#security.datasource.jdbc-url= jdbc:mysql://mysql-container-lab:3306/lab_management
+#app.datasource.jdbc-url= jdbc:mysql://mysql-container-lab:3306/lab_management
+#security.datasource.username= root
+#security.datasource.password= root
+#app.datasource.username= root
+#app.datasource.password= root
 
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
