--- a/Lab_Management.v1/pom.xml
+++ b/Lab_Management.v1/pom.xml
@@ -134,6 +134,19 @@
             <version>5.0.0</version>
         </dependency>-->
 
+        <!-- Dùng để upload file -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
