--- a/Lab_Management.v1/src/main/resources/application.properties
+++ b/Lab_Management.v1/src/main/resources/application.properties
@@ -3,9 +3,13 @@
 spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.servlet.multipart.max-file-size=50MB
-spring.servlet.multipart.max-request-size=55MB
+# S? d?ng ð? c?u h?nh upload file
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
 spring.servlet.multipart.location=${user.dir}/src/main/resources/static/
+
+
 
 server.port=8080
 error.path=/error
@@ -38,4 +42,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.dispatch-options-request=true
 
-server.max-http-header-size=100KB
+#server.max-http-header-size=100KB
